--- a/index.html
+++ b/index.html
@@ -156,49 +156,55 @@
           </ul>
         </nav>
       </section>
-      <section id="aboutSection" class="section">
+      <section id="aboutSection" class="section fp-auto-height-responsive">
         <div id="aboutContent">
           <h2 class="sectionTitle">About</h2>
           <div class="aboutMe">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, consequuntur veniam, officiis nihil deserunt laudantium aliquam veritatis error alias labore a vel sed quaerat ullam neque velit repudiandae culpa, quae est voluptate doloremque totam corporis quia. Odio ut, est nobis quas provident dolorum magni quae velit omnis veritatis accusantium neque mollitia dolorem dolor animi nam excepturi. Sit quis voluptatum incidunt modi inventore. Corporis quas nam possimus nihil odio, non laudantium.</p>
-            <img class="ilustration" src="./ilustrationTest" alt="ilustration" width="50%" height="100%">
+            <div class="text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, consequuntur veniam, officiis nihil deserunt laudantium aliquam veritatis error alias labore a vel sed quaerat ullam neque velit repudiandae culpa, quae est voluptate doloremque totam corporis quia. Odio ut, est nobis quas provident dolorum magni quae velit omnis veritatis accusantium neque mollitia dolorem dolor animi nam excepturi. Sit quis voluptatum incidunt modi inventore. Corporis quas nam possimus nihil odio, non laudantium.</p>
+            </div>
+            <div class="ilustrationContainer">
+              <img class="ilustration" src="./ilustrations/About_juli_transparente.png" alt="ilustration" >
+            </div>
+            
+            
           </div>
         </div>
       </section>
-      <section id="skillsSection" class="section">
+      <section id="skillsSection" class="section fp-auto-height-responsive">
         <div id="skillsContent">
           <h2 class="sectionTitle">Skills</h2>
           <div class="skills">
             <div class="skill">
-              <img src="./logos/html.png" alt="Html" title="Html" width="150" height="150">
+              <img src="./logos/html.png" alt="Html" title="Html" width="125px" height="125px">
             </div>
             <div class="skill">
-              <img src="./logos/css.png" alt="Css" title="Css" width="150" height="150">
+              <img src="./logos/css.png" alt="Css" title="Css" width="125px" height="120px">
             </div>
             <div class="skill">
-              <img src="./logos/js.png" alt="javascript" title="Javascript" width="150" height="150">
+              <img src="./logos/js.png" alt="javascript" title="Javascript" width="125px" height="125px">
             </div>
             <div class="skill">
-              <img src="./logos/sass.png" alt="Sass" title="Sass" width="200" height="150">
+              <img src="./logos/sass.png" alt="Sass" title="Sass" width="170px" height="125px">
             </div>
             <div class="skill">
-              <img src="./logos/git.png" alt="Git" title="Git" width="150" height="150">
+              <img src="./logos/git.png" alt="Git" title="Git" width="125px" height="125px">
             </div>
             <div class="skill">
-              <img src="./logos/python.png" alt="Python" title="Python" width="150" height="150">
+              <img src="./logos/python.png" alt="Python" title="Python" width="125px" height="125px">
             </div>
           </div>
           <div class="interestedIn">
             <h3>I want <br class="titleBr"> to learn</h3>
             <div class="interests">
               <div class="interest">
-                <img src="./logos/react.png" alt="Html" title="React" width="150" height="150">
+                <img src="./logos/react.png" alt="Html" title="React" width="125px" height="125px">
               </div>
               <div class="interest">
-                <img src="./logos/mysql.png" alt="MySQL" title="MySQL" width="170" height="150">
+                <img src="./logos/mysql.png" alt="MySQL" title="MySQL" width="140px" height="125px">
               </div>
               <div class="interest">
-                <img src="./logos/mongo.png" alt="MongoDB" title="MongoDB" width="150" height="150">
+                <img src="./logos/mongo.png" alt="MongoDB" title="MongoDB" width="125px" height="125px">
               </div>
             </div>
           </div>
