--- a/index.html
+++ b/index.html
@@ -304,6 +304,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <script src="./animations.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
