--- a/indexEsp.html
+++ b/indexEsp.html
@@ -326,7 +326,7 @@
             <a href="https://github.com/jburbanof?tab=repositories" target="blank" class="socialLink" id="gitHub">
               <img src="./logos/gitHub.png" alt="GitHub logo" title="GitHub" class="gitHubPic" width="50px" height="50px"> 
             </a>
-            <a href="https:www.linkedin.com/in/julian-burbano-dev " target="blank" class="socialLink">
+            <a href="https://www.linkedin.com/in/julian-burbano-dev " target="blank" class="socialLink">
               <img src="./logos/linkedIn.png" alt="LoinkedIn logo" title="LinkedIn" class="linkedInPic" width="55px" height="45px">
             </a>
           </div>
