--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <h2 class="sectionTitle">About</h2>
           <div class="aboutMe">
             <div class="text">
-              <p>Self-leaner Front-end developer, passionate for pixel perfect designs, like to build web sites but the most I like is to build solutions and solve problems. Always a team-player, empathic and good listener. Other things I like are sports, volleyball an football overall, love to listen music especially rock, my favorite group is Metallica.
+              <p>Autodidact Front-end developer, passionate for pixel perfect designs, like to build web sites but the most I like is to build solutions and solve problems. Always a team-player, empathic and good listener. Other things I like are sports, volleyball an football overall, love to listen music especially rock, my favorite group is Metallica.
               </p>
             </div>
             <div class="ilustrationContainer">
