--- a/indexEsp.html
+++ b/indexEsp.html
@@ -163,7 +163,7 @@
           <div class="aboutMe">
             <div class="text">
               <p>
-                Desarrollador Front-end, apacionado por diseños detallados, disfruto crear sitios web pero lo que más me gusta es construir soluciones y resolver problemas. Exelente trabajando en equipo, empático y bueno escuchando a los demás. Otras cosas que me gustan son los deportes, futbol y voleibol sobre todo, amo escuchar música, principalmente rock, mi grupo favorito es Metallica.
+                Desarrollador frontend con experiencia profesional trabajando con equipos de backend y diseño UI/UX. Me apasiona resolver problemas, convertir increibles diseños en código y crear interfases de usuario cuidadando cada detalle.
               </p>
             </div>
             <div class="ilustrationContainer">
